# termipet

./: Cargo.toml  LICENSE  Onboarding.md  README.md  claude.md  test.sh
.claude/: settings.local.json
docs/: BUILD_LOG.md  PRD_TERMIPET.md
specs/: BEHAVIOURS.md  TEST_GUIDELINES.md
specs/slices/: 01_persistence_layer.md  02_adopt_command.md  03_status_command.md  04_feed_command.md  05_play_command.md  06_walk_command.md  07_train_command.md  08_potty_and_clean.md  09_reset_command.md  10_interactive_shell.md  11_apply_decay_logic.md
src/: lib.rs  main.rs  mood.rs  persistence.rs  pet.rs  utils.rs
src/commands/: adopt.rs  clean.rs  feed.rs  mod.rs  play.rs  potty.rs  reset.rs  shell.rs  status.rs  train.rs  walk.rs
