[package]
name = "termipet"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.13.0"
